MDL-XXXX theme_noname: Fix rendering of user menu
The new template was not showing the custom menutrigger html.

--- a/theme/noname/scss/moodle/core.scss
+++ b/theme/noname/scss/moodle/core.scss
@@ -172,6 +172,14 @@ img.resize {
     box-sizing: content-box;
     padding-right: 0.5rem;
 }
+.action-menu .userpicture {
+    width: auto;
+    height: auto;
+    padding-left: 1rem;
+}
+.mform {
+    max-width: 720px;
+}
 .block img.resize,
 .breadcrumb img.resize {
     height: 0.9em;
